# Needless-Recursion

./: Needless Recursion.pyproj  Needless Recursion.sln  README.md  pyproject.toml
src/Needless_Recursion/: Needless_Recursion.py
