[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "Needless_Recursion"
version = "1.0.0"
authors = [
  { name="Derin Mehmet", email="derinmehmet256@gmail.com" },
]
description = "A suite of unnecessarily recursive algorithms."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = ""
Issues = ""